--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
 }
 .bienvenue {
     display: inline-block;
-    /* background-color: red; */
     grid-column: 2/3;
     margin-top: -26%;
     margin-left: 15%;
@@ -89,37 +88,47 @@ body {
 
 /* -------------------------- infos général------------------------------------------------------------ */
 .infos-general {
-    height: 50vh;
-    background-color: #078703e7;
+    height: 914px;
+    /* background-color: #078703e7; */
+    background-image: linear-gradient(to bottom, #078703e7, #078703e7, #078703e7, rgba(223, 223, 223, 0.841), rgba(233, 233, 233, 0.664), #fff);
     margin-top: 2%;
     padding-top: 1px;
     padding-left: 3%;
 }
 .infos-general .suivi-conso {
-    margin-left: 5%;
+    display: inline-block;
+    margin-left: 0%;
+}
+.infos-general .suivi-conso > h1 {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 26px;
-    color: #fffcfb;
-    display: inline-block;
+    color: #fffcfbde;
     letter-spacing: 1px;
 }
 .infos-general .voir-details {
-    color: #e67d07;
     display: inline-block;
+    float: right;
+    margin-right: 5%;
+}
+.infos-general .voir-details > h4 {
+    color: #d7670b;
     position: sticky;
     left: 19em;
-    font-size: 16px;
+    font-size: 17px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    height: fit-content;
+    font-weight: bold;
+}
+.infos-general .container-brand {
+    display: flex;
 }
 .infos-general .red-brand {
-    height: 12vh;
-    width: 14em;
+    height: 13vh;
+    width: 16em;
     background-color: #d2190f;
     border-radius: 10%;
     margin-top: 0%;
     padding-left: 3%;
-    display: inline-block;
+    flex: 1.2;
 }
 .infos-general .red-brand .orange-money {
     color: #f8fcf6;
@@ -141,27 +150,399 @@ body {
     color: #f8fcf6;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 17px;
-    margin-top: 5%;
+    margin-top: 8%;
 }
 .yellow-brand {
-    height: 12vh;
+    height: 13vh;
     width: 8.9em;
     margin-left: 4%;
-    margin-top: 5px;
     border-top-left-radius: 10%;
     border-bottom-left-radius: 10%;
     background-color: yellow;
-    display: inline-flex;
-    justify-content: baseline;
+    flex: 0.7;
 }
-img {
+.om-image {
     width: 20%;
     position: relative;
-    top: -27px;
-    left: 9%;
+    top: 1px;
+}
+.container-credit-global {
+    display: flex;
+}
+.call {
+    width: 19%;
+    margin-left: 12%;
+    margin-top: -6%;
 }
 .credit-global {
     font-size: 18px;
+    margin-left: 3%;
+    margin-top: 8%;
+    font-size: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: normal;
+}
+.container-credit {
+    display: flex;
+    padding: 0;
+}
+.container-credit h1 {
+    margin-left: 15%;
+    margin-top: -20%;
+    font-size: 41px;
+    /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
+}
+.container-credit h2 {
+    margin-left: 5%;
+    margin-top: -10%;
+    font-size: 27px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.valability {
+    font-size: 9.7px;
+    color: #1f1f1fd3;
+    margin-top: -22%;
+    margin-left: 9%;
+    font-weight: bold;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+/* ----------------------------------------- Rechargement ----------------------------------------------------------------------------------------------------------------------- */
+
+.rechargement .container-rechargement > :first-child {
+    color: #fffcfbde;
+    font-size: 22px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: normal;
+    display: inline-block;
+    margin-left: 2%;
+}
+.rechargement .container-rechargement > .quarante-franc {
+    color: #fffcfbed;
+    font-size: 22px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: normal;
+    display: inline;
+    float: right;
+    margin-right: 4%;
+}
+.rechargement > .expire {
+    color: #fffcfbed;
+    float: right;
+    margin-right: 4%;
+    margin-top: -9%;
+    font-size: 13px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: block;
+}
+.rechargement > .separator-line {
+    width: 97%;
+}
+.rechargement > .separator-line > hr {
+    height: 0.1px;
+    border-color: white;
+    margin-left: 2%;
+}
+.bonus-volume-nuit .container-bonus-volume-nuit > :first-child {
+    color: #fffcfbde;
+    font-size: 22px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: normal;
+    display: inline-block;
+    margin-top: -0.5%;
+    margin-left: 2%;
+}
+.bonus-volume-nuit .container-bonus-volume-nuit > .un-giga {
+    color: #fffcfbed;
+    font-size: 22px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: normal;
+    display: inline;
+    float: right;
+    margin-right: 4%;
+    margin-top: 0%;
+}
+.bonus-volume-nuit > .expire {
+    color: #fffcfbed;
+    float: right;
+    margin-right: -24%;
+    margin-top: -9%;
+    font-size: 13px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: block;
+}
+.bonus-volume-nuit > .separator-line {
+    width: 97%;
+    margin-left: 2%;
+}
+.pass-volume-mois > .container-pass-volume-mois > :first-child {
+    color: #fffcfbde;
+    font-size: 22px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: normal;
+    display: inline-block;
+    margin-top: -0.5%;
+    margin-left: 2%;
+} 
+.pass-volume-mois > .container-pass-volume-mois > .zero-octet {
+    color: #fffcfbed;
+    font-size: 22px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: normal;
+    display: inline;
+    float: right;
+    margin-right: 4%;
+    margin-top: 0%;
+}
+.pass-volume-mois > .expire {
+    color: #fffcfbed;
+    float: right;
+    margin-right: -11%;
+    margin-top: -9%;
+    font-size: 13px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: block;
+}
+
+/* ------------------------------- actions-first-row ------------------------------ */
+
+.actions-first-row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    width: 98%;
+}
+.actions-first-row .container-recharger-credit {
+    width: 7.7rem;
+    height: 20vh;
+    margin-left: 2.8%;
+    margin-top: 10%;
+    border-radius: 4%;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.actions-first-row .container-recharger-credit .img-recharger-credit {
+    width: 85%;
+    display: block;
+    margin-top: 10%;
+    margin-left: 7%;
+}
+.actions-first-row .container-recharger-credit .text-recharger .recharger {
+    margin-left: 20%;
+    margin-top: 7%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: normal;
+    font-size: 14px;
+    color: rgba(36, 36, 36, 0.9);
+}
+.actions-first-row .container-recharger-credit .text-recharger .credit {
     margin-left: 13%;
-    width: 100%;
+    margin-top: -9%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: normal;
+    font-size: 18px;
+    letter-spacing: 0.2px;
+    font-weight: bold;
+}
+.actions-first-row .container-acheter-pass {
+    width: 7.7rem;
+    height: 20vh;
+    margin-left: 2.8%;
+    margin-top: 10%;
+    border-radius: 4%;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    flex: 2/3;
+}
+.actions-first-row .container-acheter-pass .img-acheter-pass {
+    width: 85%;
+    display: block;
+    margin-top: 15%;
+    margin-left: 7%;
+}
+.actions-first-row .container-acheter-pass .text-acheter .acheter {
+    text-align: center;
+    margin-top: 7%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: normal;
+    font-size: 14px;
+    color: rgba(36, 36, 36, 0.9);
+}
+.actions-first-row .container-acheter-pass .text-acheter .pass {
+    text-align: center;
+    margin-top: -9%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 18px;
+    letter-spacing: 0.2px;
+    font-weight: bold;
+}
+.actions-first-row .container-acheter-pass .text-acheter .internet {
+    text-align: center;
+    margin-top: -15%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 18px;
+    letter-spacing: 0.2px;
+    font-weight: bold;
+}
+.actions-first-row .container-acheter-wotel {
+    width: 7.7rem;
+    height: 20vh;
+    margin-left: 2.8%;
+    margin-top: 10%;
+    border-radius: 4%;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.actions-first-row .container-acheter-wotel .img-acheter-wotel {
+    width: 85%;
+    display: block;
+    margin-top: 5%;
+    margin-left: 7%;
+}
+.actions-first-row .container-acheter-wotel .text-acheter .acheter {
+    text-align: center;
+    margin-top: 7%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: normal;
+    font-size: 14px;
+    color: rgba(36, 36, 36, 0.9);
+}
+.actions-first-row .container-acheter-wotel .text-acheter .wotel {
+    text-align: center;
+    margin-top: -9%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 17px;
+    letter-spacing: 0.2px;
+    font-weight: bold;
+}
+
+/* -------------------------------- Actions's second row-------------------------------------------- */
+
+.actions-second-row {
+    display: flex;
+    width: 98%;
+}
+.actions-second-row .container-transfert-bonus {
+    width: 7.7rem;
+    height: 20vh;
+    margin-left: 2.8%;
+    margin-top: 3%;
+    border-radius: 4%;
+    background-color: transparent;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.actions-second-row .container-transfert-bonus .img-transfert-bonus {
+    width: 85%;
+    display: block;
+    margin-top: 5%;
+    margin-left: 7%;
+}
+.actions-second-row .container-transfert-bonus .text-transfert .transfert {
+    text-align: center;
+    margin-top: 7%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: normal;
+    font-size: 16px;
+    color: rgba(36, 36, 36, 0.9);
+}
+.actions-second-row .container-transfert-bonus .text-transfert .bonus {
+    text-align: center;
+    margin-top: -9%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 18px;
+    letter-spacing: 0.2px;
+    font-weight: bold;
+}
+.actions-second-row .container-sos-credit {
+    width: 7.7rem;
+    height: 20vh;
+    margin-left: 2.8%;
+    margin-top: 3%;
+    border-radius: 4%;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.actions-second-row .container-sos-credit .img-sos-credit {
+    width: 85%;
+    display: block;
+    margin-top: 20%;
+    margin-left: 7%;
+}
+.actions-second-row .container-sos-credit .text-sos .sos {
+    text-align: center;
+    margin-top: 7%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: normal;
+    font-size: 16px;
+    letter-spacing: 0.5px;
+    color: rgba(36, 36, 36, 0.9);
+}
+.actions-second-row .container-sos-credit .text-sos .credit {
+    text-align: center;
+    margin-top: -9%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 18px;
+    letter-spacing: 0.2px;
+    font-weight: bold;
+}
+.actions-second-row .container-sos-credit .text-sos .pass {
+    text-align: center;
+    margin-top: -15%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 18px;
+    letter-spacing: 0.2px;
+    font-weight: bold;
+}
+
+.actions-second-row .container-transfert-argent {
+    width: 7.7rem;
+    height: 20vh;
+    margin-left: 2.8%;
+    margin-top: 3%;
+    border-radius: 4%;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.actions-second-row .container-transfert-argent .img-transfert-argent {
+    width: 80%;
+    display: block;
+    margin-top: 20%;
+    margin-left: 7%;
+}
+.actions-second-row .container-transfert-argent .text-transfert .transfert {
+    text-align: center;
+    margin-top: 7%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: normal;
+    font-size: 16px;
+    color: rgba(36, 36, 36, 0.9);
+}
+.actions-second-row .container-transfert-argent .text-transfert .argent {
+    text-align: center;
+    margin-top: -9%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 18px;
+    letter-spacing: 0.2px;
+    font-weight: bold;
+}
+.actions-second-row .container-transfert-argent .text-transfert .om {
+    text-align: center;
+    margin-top: -15%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 18px;
+    letter-spacing: 0.2px;
+    font-weight: bold;
 }
